--- a/index.html
+++ b/index.html
@@ -4879,7 +4879,7 @@ var AG_defineProperty=function(){var k,l=Object.defineProperty;if("function"==ty
 				    		<a href="https://www.tsn.ca/https://www.tsn.ca/live" class="watch-live">Live</a>
 				    	</li>
 				    		    										    	<li class="menu-top">
-				    		<a id="sign-in" href="https://www.tsn.ca/#" onclick="BmAuth.handleSignIn(); return false;">Sign In</a>
+				    		<a id="sign-in" href="" onclick="alert("Signed In!");">Signed IN</a>
 				    	</li>
 				    		    			    	<li class="account-menu more-nav hidden">
 	    			<span>Account</span>
